<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jesve.loginsqlite.ViewUser"
    android:background="@drawable/lake"
    android:fitsSystemWindows="true">

    <!-- Button - Help -->
    <Button
        android:id="@+id/btn_help_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/ButtonHelp"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <!--Nivel de Transparencia de un Background
        Modelo: #AARRGGBB
           AA -> Nivel de transparencia en porcentaje
           100% — FF
            95% — F2
            90% — E6
            85% — D9
            80% — CC
            75% — BF
            70% — B3
            65% — A6
            60% — 99
            55% — 8C
            50% — 80
            45% — 73
            40% — 66
            35% — 59
            30% — 4D
            25% — 40
            20% — 33
            15% — 26
            10% — 1A
            5% — 0D
            0% — 00     -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="480dp"
        android:background="#80424242"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="25dp">

        <!-- Perfil de Usuario -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />

        <!-- Subtitulo Nombres -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtName"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorWhite"/>

        <!-- Nombres del Usuario -->
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"/>

        <!-- Subtitulo Apellidos -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSurname"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

        <!-- Apellidos del Usuario -->
        <TextView
            android:id="@+id/txt_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"/>

        <!-- Subtitulo Nacionalidad -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationality"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

        <!-- Nacionalidad del Usuario -->
        <TextView
            android:id="@+id/txt_nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"/>

        <!-- Subtitulo Telefonos -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

        <!-- Telefono del Usuario -->
        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"/>

        <!-- Subtitulo Profesión -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profession"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

        <!-- Profesión del Usuario -->
        <TextView
            android:id="@+id/txt_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"/>

        <!-- Subtitulo Gustos -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Liking"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

        <!-- Gustos del Usuario -->
        <TextView
            android:id="@+id/txt_liking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"/>



    </LinearLayout>


</RelativeLayout>
